fix skill card on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -900,7 +900,7 @@ p {
         height: 170px; /* Fixed height for consistency */
         margin: 30px; /* Consistent spacing */
         margin-top: -10px;
-        margin-bottom: 300px;
+        margin-bottom: 320px;
         border: 1px solid var(--gray);
         cursor: pointer;
         transition: var(--transition-fast);
